--- a/.dbx/project.json
+++ b/.dbx/project.json
@@ -2,17 +2,17 @@
     "environments": {
         "dev": {
             "profile": "daiwt-dev-demo",
-            "workspace_dir": "/Shared/daiwt_mlops_paris/dev/dbx/daiwt_mlops_dev",
+            "workspace_dir": "/Shared/mlops-pj/dev/dbx/daiwt_mlops_dev",
             "artifact_location": "dbfs:/Shared/daiwt_mlops_paris/dev/dbx/projects/daiwt_mlops_dbx_dev"
         },
         "staging": {
             "profile": "daiwt-staging-demo",
-            "workspace_dir": "/Shared/daiwt_mlops_paris/staging/dbx/daiwt_mlops_staging",
+            "workspace_dir": "/Shared/mlops-pj/staging/dbx/daiwt_mlops_staging",
             "artifact_location": "dbfs:/Shared/daiwt_mlops_paris/staging/dbx/projects/daiwt_mlops_dbx_staging"
         },
         "prod": {
             "profile": "daiwt-prod-demo",
-            "workspace_dir": "/Shared/daiwt_mlops_paris/prod/dbx/daiwt_mlops_prod",
+            "workspace_dir": "/Shared/mlops-pj/prod/dbx/daiwt_mlops_prod",
             "artifact_location": "dbfs:/Shared/daiwt_mlops_paris/prod/dbx/projects/daiwt_mlops_dbx_prod"
         },
         "default": {
@@ -25,5 +25,6 @@
         }
     },
     "inplace_jinja_support": false,
-    "failsafe_cluster_reuse_with_assets": false
+    "failsafe_cluster_reuse_with_assets": true,
+    "context_based_upload_for_execute": false
 }
