--- a/conf/prod/.prod.env
+++ b/conf/prod/.prod.env
@@ -1,21 +1,23 @@
 env=prod
 
 // Global MLflow params for prod
-model_train_experiment_path='/Shared/daiwt_mlops_paris/prod/telco_churn_experiment_prod'
-model_name='daiwt_mlops_telco_churn_prod_paris'
-model_deploy_experiment_path='/Shared/daiwt_mlops_paris/prod/telco_churn_deployment_prod'
+model_train_experiment_path='/Shared/mlops-pj/prod/telco_churn_experiment_prod'
+model_name='mlops_telco_churn_prod_pj'
+model_deploy_experiment_path='/Shared/mlops-pj/prod/telco_churn_deployment_prod'
 
 // Feature Store params
-feature_store_database_name='daiwt_mlops_prod_paris'
+feature_store_catalog_name='mlops_pj'
+feature_store_database_name='telco_mlops_prod'
 
 // Labels table params
-labels_table_database_name='daiwt_mlops_prod_paris'
+labels_table_catalog_name='mlops_pj'
+labels_table_database_name='telco_mlops_prod'
 // tmp directory for demo purposes
-labels_table_dbfs_path='dbfs:/tmp/daiwt_mlops_paris/prod/churn_labels.delta'
+labels_table_dbfs_path='dbfs:/tmp/telco_mlops_prod/prod/churn_labels.delta'
 
 // Batch inference predictions table params
-predictions_table_database_name='daiwt_mlops_prod_paris'
+predictions_table_database_name='telco_mlops_prod'
 predictions_table_name = 'churn_predictions_paris'
 
 // Reference table params - table to use for comparing staging vs production models
-reference_table_database_name='daiwt_mlops_prod_paris'
+reference_table_database_name='telco_mlops_prod'
