adding catalog to inference

--- a/conf/prod/.prod.env
+++ b/conf/prod/.prod.env
@@ -16,6 +16,7 @@ labels_table_database_name='telco_mlops_prod'
 labels_table_dbfs_path='dbfs:/tmp/telco_mlops_prod/prod/churn_labels.delta'
 
 // Batch inference predictions table params
+predictions_table_catalog_name='mlops_pj'
 predictions_table_database_name='telco_mlops_prod'
 predictions_table_name = 'churn_predictions_paris'
 
