--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -138,19 +138,22 @@ environments:
                            '--conf-file', 'file:fuse://conf/pipeline_configs/model_train.yml']
 
       - name: 'PROD-telco-churn-train-deploy-inference-workflow-pj'
+        job_clusters:
+          - job_cluster_key: "prod_mlops_cluster_pj"
+            <<: *prod-cluster-config
         git_source:
           git_url: https://github.com/puneet-jain159/daiwt_mlops_Paris.git
           git_provider: "github"
           git_branch: "main"
         tasks:
           - task_key: 'model-train'
-            <<: *prod-cluster-config
+            job_cluster_key: "prod_mlops_cluster_pj"
             notebook_task:
               notebook_path: 'notebooks/model_train'
               base_parameters: {"env" : "prod"}
 
           - task_key: 'model-deploy'
-            <<: *prod-cluster-config
+            job_cluster_key: "prod_mlops_cluster_pj"
             notebook_task:
               notebook_path: 'notebooks/model_deployment'
               base_parameters: {"env" : "prod"}
@@ -158,7 +161,7 @@ environments:
               - task_key: 'model-train'
 
           - task_key: 'model-inference-batch'
-            <<: *prod-cluster-config
+            job_cluster_key: "prod_mlops_cluster_pj"
             notebook_task:
               notebook_path: 'notebooks/model_inference_batch'
               base_parameters: {"env" : "prod"}
@@ -167,8 +170,9 @@ environments:
               - task_key: 'model-deploy'
 
       - name: 'PROD-telco-churn-model-train-pj'
-        <<:
-          - *prod-cluster-config
+        job_clusters:
+          - job_cluster_key: "prod_mlops_cluster_pj"
+            <<: *prod-cluster-config
         git_source:
           git_url: https://github.com/puneet-jain159/daiwt_mlops_Paris.git
           git_provider: "github"
@@ -176,6 +180,7 @@ environments:
 
         tasks:
           - task_key: 'model-train'
+            job_cluster_key: "prod_mlops_cluster_pj"
             notebook_task:
               base_parameters: {"env" : "prod"}
               notebook_path: 'notebooks/model_train'
@@ -186,8 +191,9 @@ environments:
               source: GIT
 
       - name: 'PROD-telco-churn-model-deployment-pj'
-        <<:
-          - *prod-cluster-config
+        job_clusters:
+          - job_cluster_key: "prod_mlops_cluster_pj"
+            <<: *prod-cluster-config
         git_source:
           git_url: https://github.com/puneet-jain159/daiwt_mlops_Paris.git
           git_provider: "github"
@@ -195,6 +201,7 @@ environments:
 
         tasks:
           - task_key: 'model_deployment'
+            job_cluster_key: "prod_mlops_cluster_pj"
             notebook_task:
               base_parameters: {"env" : "prod"}
               notebook_path: 'notebooks/model_deployment'
