adding reference_table_catalog

--- a/conf/prod/.prod.env
+++ b/conf/prod/.prod.env
@@ -21,4 +21,5 @@ predictions_table_database_name='telco_mlops_prod'
 predictions_table_name = 'churn_predictions_paris'
 
 // Reference table params - table to use for comparing staging vs production models
+reference_table_catalog_name='mlops_pj'
 reference_table_database_name='telco_mlops_prod'
