adding the fraud dataset

--- a/conf/dev/.dev.env
+++ b/conf/dev/.dev.env
@@ -1,25 +1,25 @@
 env=dev
 
 // Global MLflow params for dev
-model_train_experiment_path='/Shared/mlops-pj/dev/telco_churn_experiment_prod'
-model_name='mlops_telco_churn_dev_pj'
-model_deploy_experiment_path='/Shared/mlops-pj/dev/telco_churn_deployment_dev'
+model_train_experiment_path='/Shared/mlops-pj/dev/fraud_detection_experiment_prod'
+model_name='mlops_fraud_detection_dev_pj'
+model_deploy_experiment_path='/Shared/mlops-pj/dev/fraud_detection_deployment_dev'
 
 // Feature Store params
 feature_store_catalog_name='mlops_pj'
-feature_store_database_name='telco_mlops_dev'
+feature_store_database_name='fraud_mlops_dev'
 
 // Labels table params
 labels_table_catalog_name='mlops_pj'
-labels_table_database_name='telco_mlops_dev'
+labels_table_database_name='fraud_mlops_dev'
 //tmp directory for demo purposes
 labels_table_dbfs_path='dbfs:/tmp/daiwt_mlops_paris/dev/churn_labels.delta'
 
 // Batch inference predictions table params
 predictions_table_catalog_name='mlops_pj'
-predictions_table_database_name='telco_mlops_dev'
+predictions_table_database_name='fraud_mlops_dev'
 predictions_table_name = 'churn_predictions_paris'
 
 // Reference table params - table to use for comparing staging vs production models
 reference_table_catalog_name='mlops_pj'
-reference_table_database_name='telco_mlops_dev'
+reference_table_database_name='fraud_mlops_dev'
