--- a/conf/dev/.dev.env
+++ b/conf/dev/.dev.env
@@ -1,7 +1,7 @@
 env=dev
 
 // Global MLflow params for dev
-model_train_experiment_path='/Shared/mlops-pj/dev/fraud_detection_experiment_prod'
+model_train_experiment_path='/Shared/mlops-pj/dev/fraud_detection_deployment_dev'
 model_name='mlops_fraud_detection_dev_pj'
 model_deploy_experiment_path='/Shared/mlops-pj/dev/fraud_detection_deployment_dev'
 
@@ -18,7 +18,7 @@ labels_table_dbfs_path='dbfs:/tmp/daiwt_mlops_paris/dev/churn_labels.delta'
 // Batch inference predictions table params
 predictions_table_catalog_name='mlops_pj'
 predictions_table_database_name='fraud_mlops_dev'
-predictions_table_name = 'churn_predictions_paris'
+predictions_table_name = 'fraud_prediction_table'
 
 // Reference table params - table to use for comparing staging vs production models
 reference_table_catalog_name='mlops_pj'
