--- a/conf/prod/.prod.env
+++ b/conf/prod/.prod.env
@@ -1,25 +1,25 @@
 env=prod
 
 // Global MLflow params for prod
-model_train_experiment_path='/Shared/mlops-pj/prod/telco_churn_experiment_prod'
-model_name='mlops_telco_churn_prod_pj'
-model_deploy_experiment_path='/Shared/mlops-pj/prod/telco_churn_deployment_prod'
+model_train_experiment_path='/Shared/mlops-pj/prod/fraud_detection_deployment_prod'
+model_name='mlops_fraud_detection_prod_pj'
+model_deploy_experiment_path='/Shared/mlops-pj/prod/fraud_detection_deployment_prod'
 
 // Feature Store params
 feature_store_catalog_name='mlops_pj'
-feature_store_database_name='telco_mlops_prod'
+feature_store_database_name='fraud_mlops_prod'
 
 // Labels table params
 labels_table_catalog_name='mlops_pj'
-labels_table_database_name='telco_mlops_prod'
-// tmp directory for demo purposes
-labels_table_dbfs_path='dbfs:/tmp/telco_mlops_prod/prod/churn_labels.delta'
+labels_table_database_name='fraud_mlops_prod'
+//tmp directory for demo purposes
+labels_table_dbfs_path='dbfs:/tmp/daiwt_mlops_paris/prod/churn_labels.delta'
 
 // Batch inference predictions table params
 predictions_table_catalog_name='mlops_pj'
-predictions_table_database_name='telco_mlops_prod'
-predictions_table_name = 'churn_predictions_paris'
+predictions_table_database_name='fraud_mlops_prod'
+predictions_table_name = 'fraud_prediction_table'
 
 // Reference table params - table to use for comparing staging vs production models
 reference_table_catalog_name='mlops_pj'
-reference_table_database_name='telco_mlops_prod'
+reference_table_database_name='fraud_mlops_prod'
