--- a/conf/pipeline_configs/feature_table_creator.yml
+++ b/conf/pipeline_configs/feature_table_creator.yml
@@ -1,7 +1,7 @@
-input_table: 'ibm_telco_churn.bronze_customers'
+input_table: 'transaction_raw.transaction'
 
 data_prep_params:
-  label_col: 'churnString'
+  label_col: 'FRD_IND'
   ohe: False
 #  # Only require cat_cols if ohe=True
 #  cat_cols: ['gender', 'partner', 'dependents',
@@ -9,4 +9,6 @@ data_prep_params:
 #             'onlineSecurity', 'onlineBackup', 'deviceProtection',
 #             'techSupport', 'streamingTV', 'streamingMovies',
 #             'contract', 'paperlessBilling', 'paymentMethod']
+  drop_col: True
+  drop_cols: ['ACCT_ID_TOKEN']
   drop_missing: False
