--- a/conf/.base_data_params.env
+++ b/conf/.base_data_params.env
@@ -10,8 +10,8 @@ labels_table_name='fraud_labels'
 labels_table_label_col='FRD_IND'
 
 // Batch inference input table params
-// For demo purposes we use the churn_labels table
-inference_table_name='fraud_label_table'
+// For demo purposes we use the fraud_labelss table
+inference_table_name='fraud_labels'
 
 // Batch inference predictions table params
 predictions_table_name='fraud_prediction_table'
@@ -19,5 +19,5 @@ predictions_table_name='fraud_prediction_table'
 //  Reference table params - table to use for comparing staging vs production models
 // For demo purposes we use the churn_labels table. However this reference table in practice would be a curated dataset
 // Note=this table must contain column(s) for lookup keys to join feature data from Feature Store
-reference_table_name='fraud_label_table'
+reference_table_name='fraud_labels'
 reference_table_label_col='FRD_IND'
