--- a/conf/pipeline_configs/model_inference_batch.yml
+++ b/conf/pipeline_configs/model_inference_batch.yml
@@ -5,7 +5,7 @@ data_input:
   # Require DataFrame to score the model on - must contain column(s) for lookup keys
   # to join feature data from Feature Store
   catalog_name: ''
-  table_name: 'fraud_mlops_prod.fraud_label_table'
+  table_name: 'fraud_mlops_prod.fraud_labels'
 
 data_output:
   mode: 'overwrite'
